added services observables

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="container">
   <app-parent></app-parent>
 </div>
+<div class="container">
+  
+  <app-newparent></app-newparent>
+</div>
