--- a/src/app/component/childform/childform.component.css
+++ b/src/app/component/childform/childform.component.css
@@ -1,8 +1,8 @@
 .container-child {
-    height: 200px;
-    width: 496px;
+    height: 600px;
+    width: 498px;
     border: 2px solid rgb(6, 69, 105);
-    background: rgb(32, 230, 49);
+    background:whitesmoke;
     border-radius: 25px;
   }
   p{
@@ -11,4 +11,22 @@
   }
 h3{
     padding-left: 10px;
+}
+.container-form{
+    height: 180px;
+    background:white;
+    margin-top: 10px;
+}
+
+.form-control.ng-touched.ng-invalid {
+    border:1px solid red;
+   }
+   .form-control.ng-touched.ng-valid {
+    border:1px solid green;
+   }
+   .pt-5 {
+    padding-top: 1rem!important;
+}
+.shadow {
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
 }
