--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <div class="container">
+  <h3>Task 1</h3>
   <app-parent></app-parent>
 </div>
+<h3>Task 2</h3>
 <div class="container">
   
   <app-newparent></app-newparent>
 </div>
+
 <div class="container">
+  <h3>Task 3</h3>
     <app-parentform></app-parentform>
   </div>
 
