--- a/src/app/component/childform/childform.component.html
+++ b/src/app/component/childform/childform.component.html
@@ -1,4 +1,4 @@
-<div class="container-child">
+<div class="container-child"*ngIf="renderEmployee">
     <h3>Employee Details</h3>
     <p>
         {{employee.name}}
@@ -17,14 +17,38 @@
         
     </p>
 </div>
-<div class="container-child">
-    <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
+<div class="container-child"*ngIf="renderForm">
+    <h3 class="text-center pt-3 text-secondary"> Form</h3>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-</div>
+<div class="Container-form">
+    <div class="row justify-content-sm-center pt-5">
+        <div class="col-sm-6 shadow round pb-3">
+         
+            <form [formGroup]="exform">
+                <div class="form-group">
+                    <div class="form-group">
+                        <label class="col-form-label">Username</label>
+                        <input formControlName="username" class="form-control" >
+                        <small *ngIf="username && username.touched" class="text-danger"> UserName is Required(no symbols, minimum length 3 )</small> 
+                      </div>
+                  <label class="col-form-label">Name:</label>
+                  <input formControlName="name" type="text" class="form-control">
+                  <small *ngIf="name && name.touched" class="text-danger">Name is Required</small>
+            
+                </div>
+                <div class="form-group">
+                  <label class="col-form-label">Email:</label>
+                  <input formControlName="email" type="text" class="form-control" >
+                  <small *ngIf="email && email.touched" class="text-danger">Email is Required</small>
+                </div>
+                <div class="form-group">
+                  <label class="col-form-label">Phone:</label>
+                  <input formControlName="phone" type="text" class="form-control" >
+                  <small *ngIf="phone && phone.touched" class="text-danger">Phone no is Required(minimum length 10,numbers are only allowed)</small>
+                </div>
+               
+                <button (click)="clicksub()" [disabled]="exform.invalid" type="button" class="btn btn-primary">Submit</button>
+              </form>
+        </div>
+    </div>
+  </div>
