--- a/src/app/component/parentform/parentform.component.html
+++ b/src/app/component/parentform/parentform.component.html
@@ -3,12 +3,143 @@
       Next employee
     </button>
     <button class="button-parent" (click)="onAdd()">ADD EMPLOYEE</button>
-    <h3>Company</h3>
-    <app-childform [employee]="employee" 
-    [renderForm]="renderForm"
-    [renderEmployee]="renderEmployee"
-
+    <h3>Company</h3> 
+    <div class="container-child" *ngIf="renderForm">
+        <form #employeeForm="ngForm" (ngSubmit)="onSubmit(employeeForm.value)">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="name">Name</label>
+              <input
+                type="name"
+                class="form-control"
+                id="name"
+                placeholder="Name"
+                name="name"
+                minlength="5"
+                maxlength="30"
+                required
+                #name="ngModel"
+                ngModel
+              />
+              <span
+                *ngIf="name.invalid && (name.dirty || name.touched)"
+                class="alert"
+              >
+                <span *ngIf="name.errors?.['required']">Name is required.</span>
+                <span *ngIf="name.errors?.['minlength']">
+                  Name must be at least 5 characters long.
+                </span>
+                <span *ngIf="name.errors?.['maxlength']">
+                  Name must not exceed 30 characters.
+                </span>
+              </span>
+            </div>
     
-    *ngIf="renderChild()" ></app-childform>
+            <div class="form-group col-md-6">
+              <label for="username">Username</label>
+              <input
+                type="username"
+                class="form-control"
+                id="username"
+                placeholder="Username"
+                name="username"
+                minlength="3"
+                maxlength="30"
+                pattern="^[_A-z0-9]*((-|\s)*[_A-z0-9])*$"
+                #username="ngModel"
+                required
+                ngModel
+              />
+              <span
+                *ngIf="username.invalid && (username.dirty || username.touched)"
+                class="alert"
+              >
+                <span *ngIf="username.errors?.['required']"
+                  >Username is required.</span
+                >
+                <span *ngIf="username.errors?.['minlength']">
+                  Username must be at least 3 characters long.
+                </span>
+                <span *ngIf="username.errors?.['maxlength']">
+                  Username must not exceed 30 characters.
+                </span>
+                <span *ngIf="username.errors?.['pattern']">
+                  Username must not contain any symbols or special characters.
+                </span>
+              </span>
+            </div>
+          </div>
+    
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="Email"
+                name="email"
+                required
+                #email="ngModel"
+                pattern="^[A-z0-9._%+-]+@[A-z0-9.-]+\.[A-z]{2,4}$"
+                ngModel
+              />
+              <span
+                *ngIf="email.invalid && (email.touched || email.dirty)"
+                class="alert"
+              >
+                <span *ngIf="email.errors?.['required']">Email is required.</span>
+                <span *ngIf="email.errors?.['pattern']"
+                  >Please enter a valid email</span
+                >
+              </span>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="phone">Phone</label>
+              <input
+                type="phone"
+                class="form-control"
+                id="phone"
+                placeholder="Phone"
+                name="phone"
+                minlength="10"
+                maxlength="10"
+                required
+                #phone="ngModel"
+                ngModel
+              />
+              <span
+                *ngIf="phone.invalid && (phone.touched || phone.dirty)"
+                class="alert"
+              >
+                <span *ngIf="phone.errors?.['required']"
+                  >Phone Number is required</span
+                >
+                <span *ngIf="phone.errors?.['minlength']"
+                  >Phone Number must be exactly 10 digits long</span
+                >
+                <span *ngIf="phone.errors?.['maxlength']"
+                  >Phone Number must be exactly 10 digits long</span
+                >
+              </span>
+            </div>
+          </div>
+          <button
+            [disabled]="!employeeForm.form.valid"
+            type="submit"
+            class="btn btn-primary"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
+    
+    
+  <app-childform  
+  *ngIf="renderChild()" [employee]="employee" 
   
-  </div>
+  [renderEmployee]="renderEmployee">
+
+</app-childform>
+
+ </div>
