--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,16 @@
 .container {
+   
     display: flex;
-    justify-content: center;
+    margin:auto;
+
+  
+    
   }
   h3 {
     margin: 50px;
  
     color: blueviolet
+  }
+  h5{
+    margin:20px;
   }
