--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,24 @@
 <div class="container">
   <h3>Task 1</h3>
-  <app-parent></app-parent>
-</div>
+  <div class="parent-class">  <app-parent></app-parent></div>
+
+  <h5>Installing Angular dependencies<br> project setup<br>
+    Button Events <br>Event Emitters<br>
+   Passing Data Parent to Child <br> Child to Parent</h5>
+  </div>
+
 
 <div class="container">
   <h3>Task 2</h3>
   <app-newparent></app-newparent>
+  <h5>Observables API calls  
+    <br>services</h5>
 </div>
 
 <div class="container">
   <h3>Task 3</h3>
     <app-parentform></app-parentform>
+    <h5>Form Validation 
+      <br> HTTPs request</h5>
   </div>
 
