--- a/src/app/component/parentform/parentform.component.css
+++ b/src/app/component/parentform/parentform.component.css
@@ -3,8 +3,8 @@
     height: 700px;
     width: 500px;
     border: 1px solid rgb(8, 8, 48);
-    background:  rgb(24, 112, 153);
-    margin-bottom: 20px;
+    background:  #7aacc4;
+ margin-bottom: 20px;
     border-radius: 10px;
   }
   h3{
