--- a/src/app/newparent/newparent.component.css
+++ b/src/app/newparent/newparent.component.css
@@ -3,7 +3,7 @@
     height: 400px;
     width: 500px;
     border: 1px solid rgb(8, 8, 48);
-    background:  rgb(24, 112, 153);
+    background:  #7aacc4;
     margin-bottom: 20px;
     border-radius: 10px;
   }
