--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,8 +9,9 @@
   h3 {
     margin: 50px;
  
-    color: blueviolet
+    color: rgb(113, 43, 226)
   }
   h5{
     margin:20px;
+    color: rgb(113, 43, 226)
   }
