--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,3 +22,10 @@
       <br> HTTPs request</h5>
   </div>
 
+<div class="container">
+  <h3>Task 4</h3>
+    <app-parentbackend></app-parentbackend>
+    <h5>Installing lokijs
+      <br> Creating Endpoints</h5>
+  </div>
+  
