--- a/src/app/components/parentbackend/parentbackend.component.html
+++ b/src/app/components/parentbackend/parentbackend.component.html
@@ -134,11 +134,11 @@
       </div>
     
     
-  <app-childform  
-  *ngIf="renderChild()" [employee]="employee" 
+  <app-child-backend  *ngIf="renderChild()" [employee]="employee" 
   
   [renderEmployee]="renderEmployee">
+ 
 
-</app-childform>
+</app-child-backend> 
 
  </div>
